<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <VideoView
            android:id="@+id/header_cover_video"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="false"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="60dp"
            android:layout_marginRight="60dp"
            android:background="@color/common_google_signin_btn_text_dark_focused"
            android:adjustViewBounds="false"
            android:scaleType="fitCenter"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_below="@+id/header_cover_video"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-60dp"
            app:civ_border_width="5dp"
            app:civ_border_color="#FFFFFF"
            android:elevation="5dp"
            android:padding="20dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profile" />

        <RelativeLayout
            android:id="@+id/profile_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/header_cover_video"
            android:background="#ebca0707"
            android:elevation="4dp"
            android:paddingBottom="24dp">

            <ImageButton
                android:id="@+id/user_icon"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/profile_rectangle_borde_imageview"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/user_icon"
                android:layout_marginRight="5dp"
                android:layout_marginTop="8dp"
                android:text="@string/event_icon"
                android:textColor="#fff"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/text_new_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="76dp"
                android:text="New Event"
                android:textColor="#fff"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_new_event_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_new_event"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:text="Complete the following fields"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_layout"
            android:layout_marginTop="5dp"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_nombre"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableTint="#FF4081"
                    android:hint="@string/event_name"
                    android:inputType="text"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_descripcion"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableTint="#FF4081"
                    android:hint="@string/event_description"
                    android:gravity="top"
                    android:fitsSystemWindows="true"
                    android:breakStrategy="balanced"
                    android:inputType="textMultiLine"
                    android:padding="5dp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_event_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/type_event" />

                <Spinner
                    android:id="@+id/spinner_event_type"
                    android:layout_width="0dp"
                    android:layout_weight="1.79"
                    android:layout_gravity="bottom"
                    android:layout_height="match_parent"/>


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edit_subtype_event"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:drawableTint="#FF4081"
                    android:hint="@string/subtype_event"
                    android:gravity="top"
                    android:fitsSystemWindows="true"
                    android:breakStrategy="balanced"
                    android:inputType="textMultiLine"
                    android:padding="5dp" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_event_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/visibility" />

                <Spinner
                    android:id="@+id/spinner_visibility"
                    android:layout_width="0dp"
                    android:layout_weight="1.79"
                    android:layout_gravity="bottom"
                    android:layout_height="match_parent"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/contacts_layout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/text_event_contacts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="#fff"
                    android:clickable="true"
                    android:elevation="4dp"
                    android:padding="20dp"
                    android:text="@string/select_contact" />

                <Button
                    android:id="@+id/button_select_contacts"
                    android:layout_width="0dp"
                    android:layout_weight="1.79"
                    android:layout_height="match_parent"
                    android:text="@string/button_select_contacts"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:paddingTop="2dp"
                android:paddingBottom="2dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button_cancel"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/button_cancel_event"/>

                <Button
                    android:id="@+id/button_accept"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:text="@string/button_accept_event"/>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>