<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:id="@+id/frag">

        <TextView
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:id="@+id/srchHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contacts"
            android:textSize="20dp"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textStyle="bold"
            android:layout_marginLeft="3dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="left|center|top" />

        <SearchView
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="@color/colorPrimary"
            android:padding="8dp"
            android:id="@+id/searchView"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:layout_gravity="right"
            android:layout_height="wrap_content"></SearchView>

        <TextView
            android:id="@+id/elementsHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="left|center"
            android:layout_marginTop="14dp"
            android:layout_marginLeft="3dp"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="15dp"
            android:textStyle="bold"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </FrameLayout>

    <ListView
        android:layout_below="@+id/frag"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/contact_button_layout"
        android:id="@+id/contacts_list"></ListView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/contact_button_layout"
        android:layout_alignParentBottom="true"
        android:weightSum="2"
        android:paddingTop="2dp"
        android:paddingBottom="2dp"
        android:orientation="horizontal"
        android:visibility="invisible">

        <Button
            android:id="@+id/button_cancel_contact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_cancel_event"/>

        <Button
            android:id="@+id/button_accept_contact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_accept_contact"/>

    </LinearLayout>

</RelativeLayout>