<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.admin.eventappb.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <com.example.admin.eventappb.Utils.MySlidingPaneLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/SlidingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutDirection="rtl">

        <LinearLayout
            android:id="@+id/details_event"
            android:layout_width="300dp"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <VideoView
                    android:id="@+id/details_event_cover_video"
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:background="@color/common_google_signin_btn_text_dark_focused"
                    android:adjustViewBounds="false"
                    android:scaleType="fitCenter"/>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/details_event_profile_photo"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_above="@+id/details_event_pane_linearLayout"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="35dp"
                    android:elevation="5dp"
                    android:src="@drawable/profile"
                    app:civ_border_color="#FFFFFF"
                    app:civ_border_width="5dp" />

                <RelativeLayout
                    android:id="@+id/details_event_profile_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/details_event_cover_video"
                    android:background="@color/colorPrimaryDark"
                    android:elevation="4dp"
                    android:paddingBottom="8dp">

                    <ImageButton
                        android:id="@+id/details_event_user_icon"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_alignParentRight="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/profile_rectangle_borde_imageview"
                        android:scaleType="centerCrop" />

                    <TextView
                        android:id="@+id/details_event_text_new_event"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/textView4"
                        android:layout_centerHorizontal="true"
                        android:text="New Event"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/details_event_text_new_event_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/details_event_text_new_event"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="12dp"
                        android:text="Complete the following fields"
                        android:textColor="#fff"
                        android:textSize="14sp" />
                </RelativeLayout>


                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/details_event_profile_layout"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical"
                    android:id="@+id/details_event_pane_linearLayout">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/details_event_edit_descripcion"
                            android:layout_width="fill_parent"
                            android:layout_height="35dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:drawableTint="#FF4081"
                            android:textColor="@color/backgroundColor"
                            android:hint="@string/event_description"
                            android:gravity="top"
                            android:fitsSystemWindows="true"
                            android:breakStrategy="balanced"
                            android:inputType="textMultiLine"
                            android:padding="5dp" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">


                    </LinearLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/details_event_edit_subtype_event"
                            android:layout_width="fill_parent"
                            android:layout_height="35dp"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:drawableTint="#FF4081"
                            android:textColor="@color/backgroundColor"
                            android:hint="@string/subtype_event"
                            android:gravity="top"
                            android:fitsSystemWindows="true"
                            android:breakStrategy="balanced"
                            android:inputType="textMultiLine"
                            android:padding="5dp" />

                    </android.support.design.widget.TextInputLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_detail_event_pane_visibility"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:clickable="true"
                            android:layout_marginLeft="10dp"
                            android:elevation="4dp"
                            android:textColor="@color/backgroundColor"
                            android:layout_weight="1.5"
                            android:padding="20dp"/>

                        <TextView
                            android:id="@+id/text_event_pane_visibility"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:background="#fff"
                            android:layout_weight="0.5"
                            android:clickable="true"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/visibility" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/details_event_contacts_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/common_google_signin_btn_text_dark_default"
                        android:orientation="vertical"
                        android:visibility="invisible">

                        <TextView
                            android:id="@+id/details_event_text_event_contacts"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp"
                            android:layout_gravity="left"
                            android:background="#fff"
                            android:elevation="4dp"
                            android:padding="10dp"
                            android:text="@string/contact_selected" />

                        <ListView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:padding="3dp"
                            android:id="@+id/details_contacts_list"
                            android:background="@drawable/sliding_pane_border_event_back"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/details_event_button_layout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="2"
                        android:paddingTop="2dp"
                        android:paddingBottom="2dp"
                        android:orientation="horizontal"
                        android:visibility="invisible">

                        <Button
                            android:id="@+id/button_modfy_event"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="@string/button_modify_event"/>

                        <Button
                            android:id="@+id/button_delete_event"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:text="@string/button_delete_event"/>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <include layout="@layout/content_main" />


    </com.example.admin.eventappb.Utils.MySlidingPaneLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

</android.support.design.widget.CoordinatorLayout>
